src/objects/Cost_Items__c.object
<CustomObject>
    <description>The purpose of this object is to tracked planned and actual IT work costs back to a project.  Project budgets and costs can be rolled up to a portfolio or back to the business unit sponsor via reports and dashboards to help identify the value of IT services.</description>
    <fields>
        <fullName>Actual_Costs__c</fullName>
        <label>Actual Costs</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternatives__c</fullName>
        <label>Alternatives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Capital_Expense__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Costs that are a part of investments in your business and are called capital expenses. Capital expenses are considered assets.  3 types of capital cost include; business start-up costs , business assets, and business improvements.</inlineHelpText>
        <label>Capital Expense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Description__c</fullName>
        <label>Cost Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <label>Budget Expectation</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dispute_Reason__c</fullName>
        <inlineHelpText>If the cost payment is in an &quot;on-hold&quot; status, please enter the reason for refusal of payment.</inlineHelpText>
        <label>Dispute Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimate_Date__c</fullName>
        <label>Estimate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Costs__c</fullName>
        <label>Estimated Costs</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>PPM_Project__c</referenceTo>
        <relationshipName>R00N80000002lUwbEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TheCost_Type__c</fullName>
        <label>Cost Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Costs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Variance__c</fullName>
        <formula>Estimated_Costs__c - Actual_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Budget &amp; Cost Item</label>
    <nameField>
        <label>Cost Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget &amp; Cost Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>